--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -11,6 +11,19 @@
   & + .question {
     margin-top: 8px;
   }
+  
+  &.highlighted {
+    background: #f4f0ff;
+    border: 1px solid #835afb;
+    
+    footer .user-info span {
+      color: #29292e;
+    }
+  }
+  
+  &.answered {
+    background: #dbdcdd;
+  }
 
   footer {
     display: flex;
@@ -33,6 +46,11 @@
         color: #737380;
         font-size: 14px;
       }
+    }
+
+    > div {
+      display: flex;
+      gap: 16px;
     }
 
     button {
