--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -17,7 +17,7 @@
       > div {
         display: flex;
         gap: 16px;
-        
+
         .button {
           height: 40px;
           padding: 0 32px;
@@ -73,7 +73,7 @@
         .user-info {
           display: flex;
           align-items: center;
-          
+
           img {
             width: 32px;
             height: 32px;
@@ -108,6 +108,40 @@
 
     .questions-list {
       margin: 32px 0 20px;
+    }
+  }
+
+  &.blocked {
+    width: 100vw;
+    height: 100vh;
+    background: #dbdcdd;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    main {
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+
+      padding: 30px;
+      background: #fff;
+      border: 1px solid #835afb;
+      border-radius: 8px;
+
+      img {
+        width: 50%;
+        align-self: center;
+        margin-bottom: 20px;
+      }
+
+      p {
+        align-self: center;
+        text-align: center;
+        width: 90%;
+        margin-bottom: 20px;
+      }
     }
   }
 }
