--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -11,16 +11,16 @@
   & + .question {
     margin-top: 8px;
   }
-  
+
   &.highlighted {
     background: #f4f0ff;
     border: 1px solid #835afb;
-    
+
     footer .user-info span {
       color: #29292e;
     }
   }
-  
+
   &.answered {
     background: #dbdcdd;
   }
@@ -34,7 +34,7 @@
     .user-info {
       display: flex;
       align-items: center;
-      
+
       img {
         width: 32px;
         height: 32px;
@@ -44,7 +44,7 @@
       span {
         margin-left: 8px;
         color: #737380;
-        font-size: 14px;
+        font-size: 1.4rem;
       }
     }
 
