--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -18,13 +18,13 @@
     }
 
     strong {
-      font: 700 36px 'Poppins', sans-serif;
+      font: 700 3.6rem 'Poppins', sans-serif;
       line-height: 42px;
       margin-top: 16px;
     }
 
     p {
-      font-size: 24px;
+      font-size: 2.4rem;
       line-height: 32px;
       margin-top: 16px;
       color: #f8f8f8;
@@ -43,7 +43,7 @@
 
   .main-content {
     display: flex;
-    flex-direction: column;  
+    flex-direction: column;
     width: 100%;
     max-width: 320px;
     align-items: stretch;
@@ -56,7 +56,7 @@
     }
 
     h2 {
-      font-size: 24px;
+      font-size: 2.4rem;
       margin: 64px 0 24px;
       font-family: 'Poppins', sans-serif;
     }
@@ -80,7 +80,7 @@
     }
 
     p {
-      font-size: 14px;
+      font-size: 1.4rem;
       color: #737380;
       margin-top: 16px;
 
@@ -117,7 +117,7 @@
   }
 
   .separator {
-    font-size: 14px;
+    font-size: 1.4rem;
     color: #a8a8b3;
 
     margin: 32px 0;
