--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -1,6 +1,6 @@
 #page-room {
   header {
-    padding: 24px;
+    padding: 24px 36px;
     border: 1px solid #e2e2e2;
 
     .content {
@@ -141,6 +141,36 @@
         text-align: center;
         width: 80%;
         margin-bottom: 20px;
+      }
+    }
+  }
+}
+
+@media (max-width: 860px) {
+  #page-room {
+    main {
+      width: 80%;
+
+      form {
+        .form-footer {
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 2rem;
+
+          button {
+            width: 100%;
+          }
+        }
+      }
+
+      .questions-list {
+        .user-info {
+          gap: 1rem;
+
+          span {
+            margin: 0;
+          }
+        }
       }
     }
   }
